tests/ui/missing-display.stderr
error[E0277]: `MyError` doesn't implement `std::fmt::Display`
  --> $DIR/missing-display.rs:4:1
   |
4  | pub enum MyError {
   | ^^^^^^^^^^^^^^^^ `MyError` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `MyError`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
